--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ input:-webkit-autofill {-webkit-text-fill-color: #333333 !important;-webkit-tran
 </style></head><body><div class="shaoshidianying-h"><a href="/" class="logo"></a><nav class="shaoshidianying-m"></nav></div><div class="main"><div class="shaoshidianying"><h1>邵氏电影-邵氏电影大全-邵氏电影544部超清画质合集免费网盘下载</h1><div class="shaoshidianying-a" id="shaoshidianying-a-01"></div><p>本站免费分享邵氏出品的544部电影 4K超清晰度电影其中大部分为经典武侠电影很多皆为绝版电影动作设计别具一格，剧情跌宕起伏，邵氏在当时开创了新派武侠片的潮流，有需要的兄弟拿去吧。</p>
 <h2>邵氏出品的544部电影网盘下载</h2>
 <blockquote>
-<p>夸克网盘下载链接：https://pan.quark.cn/s/5b5d8bc4201f</p>
+<p>夸克网盘下载链接：<a href="https://pan.quark.cn/s/81e5be9387ef">https://pan.quark.cn/s/81e5be9387ef</a></p>
 </blockquote>
 <p>邵氏电影公司（Shaw Brothers Studio）是华语电影史上最具影响力的电影制作公司之一，其辉煌的历史可以追溯到20世纪20年代。邵氏兄弟——邵醉翁、邵邨人、邵仁枚和邵逸夫——共同创立了这个电影帝国，并在随后的几十年里将其发展成为亚洲乃至全球范围内最具影响力的电影公司之一。邵氏电影不仅在香港电影史上占据了重要地位，也对整个华语电影产业产生了深远的影响。本文将从邵氏电影的历史背景、发展历程、电影风格、代表性作品及其对华语电影的影响等方面进行详细介绍。</p>
 <h2>一、邵氏电影的历史背景</h2>
